Fixing Color Contrast

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -18,7 +18,7 @@ header {
     justify-content: space-between;
     text-align: center;
     margin-bottom: 2rem;
-    background-color: #d3d1b4;
+    background-color: #6c6501;
     padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(206, 184, 22, 0.1);
@@ -27,7 +27,7 @@ header {
 
 header h1 {
     font-size: 2rem;
-    color: #686607;
+    color: #ffffff;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
     font-weight: bold;
     margin-left: 1rem;
@@ -45,7 +45,7 @@ nav ul {
 
 nav a {
     text-decoration: none;
-    color: #6b6d01;
+    color: #ffffff;
     font-weight: bold;
     transition: color 0.3s ease;
 }
